<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:columnCount="1"
    android:gravity="center"
        android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:columnCount="1" >

        <EditText
            android:id="@+id/text_login"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="2"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/placeholder_login"
            android:inputType="textPersonName"
            android:lines="1"
            android:selectAllOnFocus="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/text_password"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="5"
            android:ems="10"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_row="5"
            android:onClick="authenticate"
            android:text="@string/button_login" />

    </GridLayout>

</LinearLayout>